added connection buttons to addModify.cs and added grafic assets

--- a/tpWinformGroup9/tpWinformGroup9.csproj
+++ b/tpWinformGroup9/tpWinformGroup9.csproj
@@ -60,6 +60,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="addModify.resx">
+      <DependentUpon>addModify.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Principal.resx">
       <DependentUpon>Principal.cs</DependentUpon>
     </EmbeddedResource>
